# virtual_ai_coach

./: .gitignore  .pre-commit-config.yaml  RAILWAY_DEPLOYMENT.md  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: deploy-supabase-migrations.yml  validate-supabase-migrations.yml
backend/: .env.example  __init__.py  benchmark_current_performance.py  benchmark_optimized_performance.py  benchmark_streaming_performance.py  package-lock.json  package.json  test_40min_workout.py  test_video_service.py
backend/app/: main.py
backend/app/api/: __init__.py  exercises.py  workouts.py
backend/scripts/: README_BREAK_VIDEOS.md  exercises.json  generate_break_videos.py  migrate.js  seed_exercises.js  upload_breaks_to_supabase.py  upload_videos_to_supabase.js  video_urls_mapping.json
backend/supabase/: config.toml  schema.sql  seed.sql
backend/tests/: conftest.py  test_api_exercises.py  test_models.py  test_workout_generator.py
docs/: add_new_exercise_guide.md  api_documentation.md  architecture_globale.md  backend_technology_comparison.md  backend_video_module_plan.md  backlog.md  database_schema_diagram.md  database_strategy.md  frontend_nextjs_plan.md  trello_backlog.md  workout_generator_plan.md
evaluation/: .gitignore
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: useComingSoonModal.ts  useExercises.ts  useWorkoutGeneration.ts
frontend/lib/: api.ts  exerciseIcons.ts  types.ts
frontend/providers/: AuthProvider.tsx  ComingSoonProvider.tsx
frontend/store/: trainingStore.ts
(+40 files in other folders)
