[project]
name = "virtual-ai-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.120.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "supabase>=2.24.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "httpx>=0.28.1",
    "pbr>=7.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
pbr = []
